--- a/public/Source/flaticon/_flaticon.scss
+++ b/public/Source/flaticon/_flaticon.scss
@@ -37,8 +37,8 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-001-mattress:before { content: "\f100"; }
-.flaticon-002-dumbell:before { content: "\f101"; }
+.flaticon-001-mattress:before { content: "\f100"; }
+.flaticon-love:before:before { content: "\f101"; }
 .flaticon-003-weight:before { content: "\f102"; }
 .flaticon-004-measuring-tape:before { content: "\f103"; }
 .flaticon-005-clipboard:before { content: "\f104"; }
@@ -70,7 +70,7 @@
 .flaticon-031-workout:before { content: "\f11e"; }
 .flaticon-032-bottle:before { content: "\f11f"; }
 .flaticon-033-juice:before { content: "\f120"; }
-.flaticon-034-stationary-bike:before { content: "\f121"; }
+.flaticon-love:before { content: "\f121"; }
 .flaticon-035-punching-ball-1:before { content: "\f122"; }
 .flaticon-036-timer:before { content: "\f123"; }
 .flaticon-037-medal:before { content: "\f124"; }
@@ -89,7 +89,7 @@
 .flaticon-050-no-fast-food:before { content: "\f131"; }
     
     $font-Flaticon-001-mattress: "\f100";
-    $font-Flaticon-002-dumbell: "\f101";
+    $font-Flaticon-002-heart: "\f101";
     $font-Flaticon-003-weight: "\f102";
     $font-Flaticon-004-measuring-tape: "\f103";
     $font-Flaticon-005-clipboard: "\f104";
@@ -121,7 +121,7 @@
     $font-Flaticon-031-workout: "\f11e";
     $font-Flaticon-032-bottle: "\f11f";
     $font-Flaticon-033-juice: "\f120";
-    $font-Flaticon-034-stationary-bike: "\f121";
+    $font-flaticon-love: "\f121";
     $font-Flaticon-035-punching-ball-1: "\f122";
     $font-Flaticon-036-timer: "\f123";
     $font-Flaticon-037-medal: "\f124";
