--- a/public/Source/flaticon/flaticon.css
+++ b/public/Source/flaticon/flaticon.css
@@ -31,7 +31,7 @@ margin-left: 20px;
 }
 
 .flaticon-001-mattress:before { content: "\f100"; }
-.flaticon-002-dumbell:before { content: "\f101"; }
+.flaticon-002-heart:before { content: "\f101"; }
 .flaticon-003-weight:before { content: "\f102"; }
 .flaticon-004-measuring-tape:before { content: "\f103"; }
 .flaticon-005-clipboard:before { content: "\f104"; }
@@ -63,7 +63,7 @@ margin-left: 20px;
 .flaticon-031-workout:before { content: "\f11e"; }
 .flaticon-032-bottle:before { content: "\f11f"; }
 .flaticon-033-juice:before { content: "\f120"; }
-.flaticon-034-stationary-bike:before { content: "\f121"; }
+.flaticon-love:before { content: "\f121"; }
 .flaticon-035-punching-ball-1:before { content: "\f122"; }
 .flaticon-036-timer:before { content: "\f123"; }
 .flaticon-037-medal:before { content: "\f124"; }
