--- a/src/components/Counseling/Counseling.css
+++ b/src/components/Counseling/Counseling.css
@@ -73,8 +73,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
-    background-color: #12002B;  /* Replace with the exact color code from the image */
+    padding: 0 0;
+    background-color: #f4f4f4;  /* Replace with the exact color code from the image */
     border-radius: 12px;
 }
 
@@ -87,26 +87,29 @@ body {
 /* Main Section */
 .main-section {
     text-align: center;
-    margin: 50px 0;
+    margin: 0 0;
+    background-color: #151515;
 }
 
 .main-section h2 {
     font-size: 28px;
     font-weight: bold;
-    color: #2E2E2E; /* Darker color */
-    margin-bottom: 15px;
+    color: #fafaf9; /* Darker color */
+    margin-bottom: 5px;
+    padding: 50px;
     position: relative;
 }
 
 .main-section p {
     font-size: 16px;
-    color: #6d6d6d;
+    justify-content: center;
+    color: #fafafa;
     margin-bottom: 20px;
     line-height: 1.6; /* Improved line spacing */
 }
 
 .cta-button {
-    background-color: #000;
+    background-color: #f36100;
     color: #fff;
     padding: 12px 35px;
     border-radius: 30px;
@@ -115,7 +118,7 @@ body {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .cta-button:hover {
@@ -127,13 +130,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 50px 0;
+    margin: 0px 0;
 }
 
 .offer-section img {
     max-width: 40%;
     height: auto;
     border-radius: 12px;
+    margin-bottom: 30px;
 }
 
 .offer-content {
@@ -144,30 +148,29 @@ body {
 .offer-content h3 {
     font-size: 24px;
     font-weight: bold;
-    color: #2E2E2E;
+    color: #f36100;
     margin-bottom: 15px;
 }
 
 .offer-content p {
     font-size: 16px;
-    color: #6d6d6d;
+    color: #ffffff;
     margin-bottom: 20px;
     line-height: 1.6; /* Improved line spacing */
 }
 
 /* Why Choose Us Section */
 .why-choose-us {
-    background-color: #FBF7F6;  /* Matching background color */
-    padding: 50px 20px;
-    margin-bottom: 30px;
-    border-radius: 12px;
+    background-color: #151515;  /* Matching background color */
+    padding: 50px;
+    margin-bottom: 0px;
     text-align: left;
 }
 
 .why-choose-us h3 {
     font-size: 24px;
     font-weight: bold;
-    color: #2E2E2E; /* Darker color */
+    color: #f36100; /* Darker color */
     margin-bottom: 15px;
 }
 
@@ -178,24 +181,23 @@ body {
 
 .why-choose-us li {
     font-size: 16px;
-    color: #6d6d6d;
+    color: #ffffff;
     margin-bottom: 10px;
     line-height: 1.6; /* Improved line spacing */
 }
 
 /* How It Works Section */
 .how-it-works {
-    background-color: #FBF7F6;  /* Matching background color */
-    padding: 50px 20px;
-    margin-bottom: 30px;
-    border-radius: 12px;
+    background-color: #151515;  /* Matching background color */
+    padding: 50px;
+    margin-bottom: 0px;
     text-align: left;
 }
 
 .how-it-works h3 {
     font-size: 24px;
     font-weight: bold;
-    color: #2E2E2E; /* Darker color */
+    color: #f36100; /* Darker color */
     margin-bottom: 15px;
 }
 
@@ -205,7 +207,7 @@ body {
 
 .how-it-works li {
     font-size: 16px;
-    color: #6d6d6d;
+    color: #ffffff;
     margin-bottom: 10px;
     line-height: 1.6; /* Improved line spacing */
 }
@@ -312,6 +314,7 @@ body {
 
     .main-section h2 {
         font-size: 22px;
+        color: white;
     }
 
     .main-section p {
@@ -339,6 +342,10 @@ body {
 @media (max-width: 480px) {
     .main-section h2 {
         font-size: 18px;
+    }
+
+    .hero-section {
+        padding: 0 0;
     }
 
     .main-section p {
