--- a/src/components/Events/EventsPage.css
+++ b/src/components/Events/EventsPage.css
@@ -91,12 +91,13 @@ body {
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    background-color: #151515;
 }
 
 /* Sidebar */
 .sidebar {
     width: 250px;
-    background-color: #fff;
+    background-color: #151515;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -106,7 +107,7 @@ body {
     font-size: 22px;
     font-weight: bold;
     margin-bottom: 15px;
-    color: #2E2E2E;
+    color: #ffffff;
 }
 
 .filter-item {
@@ -116,7 +117,7 @@ body {
 .filter-item label {
     display: block;
     font-size: 14px;
-    color: #4A4A4A;
+    color: #ffffff;
     margin-bottom: 5px;
 }
 
@@ -159,7 +160,7 @@ body {
 .upcoming-events h3 {
     font-size: 28px;
     font-weight: bold;
-    color: #2E2E2E;
+    color: #ffffff;
     margin-bottom: 30px;
     text-align: center;
 }
@@ -172,7 +173,7 @@ body {
 
 .event-card {
     flex: 1;
-    background-color: #E0B0FF;
+    background-color: #f36100;
     border-radius: 12px;
     padding: 20px;
     text-align: center;
@@ -190,13 +191,13 @@ body {
 .event-card h4 {
     font-size: 22px;
     font-weight: bold;
-    color: #2E2E2E;
+    color: #ffffff;
     margin-bottom: 15px;
 }
 
 .event-card p {
     font-size: 16px;
-    color: #6d6d6d;
+    color: #ffffff;
     margin-bottom: 15px;
 }
 
@@ -220,9 +221,9 @@ body {
 
 /* Advertisement section */
 .advertisement {
-    background-color: #FFC0CB;
+    background-color: #ffffff;
     border-radius: 8px;
-    padding: 10px;
+    padding: 5px;
     margin-top: 10px;
 }
 
